--- a/style.css
+++ b/style.css
@@ -74,3 +74,40 @@ header .logo_wrapper .toggle{
     cursor: pointer;
 }
 
+
+/* ******************************* */
+/*   STYLING THE ABOUT SECTION     */
+/* ******************************* */
+.about{
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+.about .contentBx{
+    background-color: #162c3b;
+    padding: 100px;
+    width: 50%;
+}
+
+.heading{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.text{
+    color: rgb(221, 221, 221);
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.imgBx{
+    background-image: url(./Images/window.jpg);
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+}
