--- a/style.css
+++ b/style.css
@@ -111,3 +111,54 @@ header .logo_wrapper .toggle{
     background-size: cover;
     background-position: center;
 }
+
+/* ************************************** */
+/*    STYLING THE Our Services SECTION    */
+/* ************************************** */
+
+.services{
+    position: relative;
+    background: #12222d;
+    width: 100%;
+    padding: 100px;
+}
+
+.services .heading{
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
+}
+
+.services .text{
+    text-align: center;
+}
+
+.services .container{
+    width: 100%;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 60px;
+}
+
+.services .container .serviceBx{
+    position: relative;
+    background: #fff;
+    width: 350px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.services .container .serviceBx img{
+    max-width: 150px;
+}
+
+.services .container .serviceBx h2{
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 1px;
+}
