--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ header .logo_wrapper .toggle{
     letter-spacing: 1px;
 }
 
-.imgBx{
+.about .imgBx{
     background-image: url(./Images/window.jpg);
     width: 50%;
     background-size: cover;
@@ -151,6 +151,7 @@ header .logo_wrapper .toggle{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;;
 }
 
 .services .container .serviceBx img{
@@ -158,7 +159,37 @@ header .logo_wrapper .toggle{
 }
 
 .services .container .serviceBx h2{
-    font-weight: 500;
+    font-weight: 600;
     font-size: 20px;
     letter-spacing: 1px;
+    margin-top: 30px;
 }
+
+/* ************************************** */
+/*    STYLING THE Technology SECTION    */
+/* ************************************** */
+
+.technology{
+    position: relative;
+    background: #3f8ffc;
+    width: 100%;
+    padding: 100px;
+    padding-top: 300px;
+    margin-top: -300px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.technology .imgBx{
+    max-width: 250px;
+}
+
+.technology .text{
+    margin-right: 80px;
+}
+
+.technology .imgBx img{
+    max-width: 250px;
+}
+
