--- a/style.css
+++ b/style.css
@@ -193,3 +193,31 @@ header .logo_wrapper .toggle{
     max-width: 250px;
 }
 
+/* ************************************** */
+/*    STYLING THE Client SECTION    */
+/* ************************************** */
+
+.client{
+    background-color: #162c3b;
+    padding: 100px;
+    text-align: center;
+}
+
+.client .imgBx{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.client .imgBx img{
+    max-width: 200px;
+    margin: 20px;
+    opacity: 0.5;
+    transition: .4s;
+}
+
+.client .imgBx img:hover{
+    opacity: 1;
+}
