--- a/style.css
+++ b/style.css
@@ -260,3 +260,105 @@ header .logo_wrapper .toggle{
     text-align: end;
     color: #3475ca;
 }
+
+/* ************************************** */
+/*      STYLING THE CONTACT SECTION       */
+/* ************************************** */
+
+.contact .content{
+    background: #162c3b;
+    padding: 100px;
+    text-align: center;
+}
+
+.user_space{
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+.contact .user_space .contentBx{
+    background-color: #3475ca;
+    padding: 100px;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact .user_space .imgBx2{
+    background-image: url(./Images/bg2.jpg);
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+}
+
+.redbg{
+    background-image: url(./Images/red.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.form{
+    width: 100%;
+}
+
+.form .inputBx{
+    margin-bottom: 40px;
+}
+
+.form .inputBx input[type="text"]{
+    width: 100%;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    padding: 10px 0;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    border-bottom: 2px solid #fff;
+}
+
+.form .inputBx input::placeholder{
+    color: #fff;
+}
+
+.form .inputBx textarea{
+    width: 100%;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    padding: 10px 0;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    min-height: 150px;
+    border-bottom: 2px solid #fff;
+}
+
+.form .inputBx textarea::placeholder{
+    color: #fff;
+}
+
+.form .inputBx input[type="submit"]{
+    width: 100%;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    padding: 10px 0;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    border-bottom: 2px solid #fff;
+}
+
+.form .inputBx input[type="submit"]{
+    max-width: 150px;
+    font-size: 18px;
+    background-color: #fff;
+    color: #111;
+}
