--- a/style.css
+++ b/style.css
@@ -362,3 +362,36 @@ header .logo_wrapper .toggle{
     background-color: #fff;
     color: #111;
 }
+
+footer{
+    background-color: #162c3b;
+    padding: 20px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .text{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer ul li{
+    list-style: none;
+}
+
+ul li a{
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 10px;
+}
+
+ul li a{
+    filter: invert(1);
+}
